--- a/manifest.json
+++ b/manifest.json
@@ -3,16 +3,51 @@
     "name": "meteo.FVG",
     "short_name": "meteo.FVG",
     "description": "Previsioni meteorologiche per il Friuli-Venezia Giulia",
-    "scope": "./",
+    "display": "standalone",
+    "scope": "/",
+    "start_url": "/",
+    "theme_color": "#F28A00",
+    "background_color": "#F28A00",
     "icons": [
+        {
+            "src": "img/icon-72x72.png",
+            "sizes": "72x72",
+            "type": "image/png"
+        },
+        {
+            "src": "img/icon-96x96.png",
+            "sizes": "96x96",
+            "type": "image/png"
+        },
+        {
+            "src": "img/icon-128x128.png",
+            "sizes": "128x128",
+            "type": "image/png"
+        },
         {
             "src": "img/icon-144x144.png",
             "sizes": "144x144",
             "type": "image/png"
+        },
+        {
+            "src": "img/icon-152x152.png",
+            "sizes": "152x152",
+            "type": "image/png"
+        },
+        {
+            "src": "img/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "img/icon-384x384.png",
+            "sizes": "384x384",
+            "type": "image/png"
+        },
+        {
+            "src": "img/icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
         }
-    ],
-    "display": "standalone",
-    "start_url": "./index.html",
-    "theme_color": "#F28A00",
-    "background_color": "#F28A00"
+    ]
 }
